--- a/data/projects/4-transportation.yaml
+++ b/data/projects/4-transportation.yaml
@@ -1,4 +1,4 @@
 modalID: 4
 title: Getting around
 img: panda-york-mist-fantasy-macdonald-s1p0.png
-description: Toronto has pretty solid public transportation, as much as Rob Ford tries otherwise.
+description: Toronto has pretty solid public transportation.
