--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "http://replace-this-with-your-hugo-site.com/"
+baseurl = "http://pennyandalistair.github.io/"
 languageCode = "en-us"
 title = "Hugo Creative Theme"
 theme = "creative"
