--- a/data/projects/4-transportation.yaml
+++ b/data/projects/4-transportation.yaml
@@ -1,4 +1,11 @@
 modalID: 4
 title: Getting around
 img: panda-york-mist-fantasy-macdonald-s1p0.png
-description: Toronto has pretty solid public transportation.
+description: >
+  For out of town guests, the best point of arrival is Toronto Pearson International Airport (YYZ).
+  Another airport, Billy Bishop (YTZ), also has a few offers, but most long international flights arrive at YYZ.
+  Getting to city center from the airport is straightforward:
+  there is an (express shuttle)[https://www.upexpress.com/] from YYZ,
+  and YTZ is a 5 minute walk from the city, where local tram services are available.
+  Nevertheless, we highly recommend you rent a car if you are from out of town,
+  as the McMichael art gallery is not easily accessible by public transportation.
