--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "public"]
 	path = public
-	url = git@github-panda:pennyandalistair/pennyandalistair.github.io.git
+	url = git@github.com:pennyandalistair/pennyandalistair.github.io.git
 	branch = master
